--- a/app/src/main/res/layout/activity_leaveform.xml
+++ b/app/src/main/res/layout/activity_leaveform.xml
@@ -43,14 +43,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="150dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/lf_from"
+                android:layout_weight="1"
                 android:textColorHint="@color/Black"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
@@ -65,7 +64,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="150dp"
+                android:layout_width="fill_parent"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:id="@+id/lf_to"
                 android:textColorHint="@color/Black"
